# opencode-litellm

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
.claude/skills/plugin-overview/: SKILL.md
.claude/skills/read-plugin-logs/: SKILL.md
.claude/skills/reset-plugin-config/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: lint.yml  release.yml  test.yml
.opencode/: opencode.json
scripts/: read_logs.py  reset.py
src/: index.ts  setup.ts
tests/: integration.test.ts  plugin.test.ts
tests/e2e/: run.ts
tests/fixtures/: litellm-server.ts  start-server-ci.ts
