[project]
name = "opencode-litellm-dev"
version = "0.0.0"
description = "Developer scripts for the opencode-litellm plugin"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.scripts]
reset = "scripts.reset:main"
read-logs = "scripts.read_logs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
